Fix bad named route.

--- a/app/views/admin/pages/_site_subnav.rhtml
+++ b/app/views/admin/pages/_site_subnav.rhtml
@@ -17,7 +17,7 @@
 <div id="sites">
   <% Site.find(:all).each do |site| %>
     <% name = (@site == site) ? "<strong>#{site.name}</strong>" : site.name -%>
-    <%= link_to name, page_index_path(:root => site.homepage) %>
+    <%= link_to name, pages_path(:root => site.homepage) %>
   <% end %>
 </div>
 
