--- a/app/views/admin/pages/_site_subnav.rhtml
+++ b/app/views/admin/pages/_site_subnav.rhtml
@@ -17,7 +17,7 @@
 <div id="sites">
   <% Site.find(:all).each do |site| %>
     <% name = (@site == site) ? "<strong>#{site.name}</strong>" : site.name -%>
-    <%= link_to name, pages_path(:root => site.homepage) %>
+    <%= link_to name, admin_pages_path(:root => site.homepage) %>
   <% end %>
 </div>
 
@@ -28,7 +28,7 @@
       this.expandedRows = [];
       this.saveExpandedCookie();
       var id = row.id.split("-").last();
-      window.location = <%= page_index_url.to_json %> + "?root=" + id;
+      window.location = <%= admin_pages_path.to_json %> + "?root=" + id;
     };
   <% end %>
   <% if @homepage %>
