--- a/app/views/admin/sites/index.haml
+++ b/app/views/admin/sites/index.haml
@@ -1,20 +1,22 @@
-%h1 Sites
+- @page_title = 'Sites - ' + default_page_title
 
-%table{:class => "index", :cellspacing => "0"}
-  %thead
-    %tr
-      %th Name
-      %th Domain match
-      %th Base domain
-      %th Modify
-      %th Order
-  %tbody
-    - @sites.each do |site|
-      %tr[site]
-        %td= link_to site.name, edit_admin_site_path(site)
-        %td= h(site.domain)
-        %td= h(site.base_domain)
-        %td= link_to image("remove.png", :alt => "Remove"), admin_site_path(site), :method => :delete, :confirm => "Are you sure you want to permanently remove #{site.name}?"
-        %td= order_links(site)
-%p
-  = link_to "New Site", new_admin_site_path
+.outset
+  %table#users.index
+    %thead
+      %tr
+        %th Name
+        %th Domain match
+        %th Base domain
+        %th Modify
+        %th Order
+      %tbody
+        - @sites.each do |site|
+          %tr[site]
+            %td= link_to site.name, edit_admin_site_path(site)
+            %td= h(site.domain)
+            %td= h(site.base_domain)
+            %td= link_to image("remove.png", :alt => "Remove"), admin_site_path(site), :method => :delete, :confirm => "Are you sure you want to permanently remove #{site.name}?"
+            %td= order_links(site)
+#actions
+  %ul
+    %li= link_to "New Site", new_admin_site_url
