--- a/app/views/admin/sites/new.haml
+++ b/app/views/admin/sites/new.haml
@@ -1,3 +1,4 @@
+- body_classes << "reversed"
+
 %h1 New Site
-- form_for :site, @site, :url => admin_sites_path do |f|
-  = render :partial => "form", :locals => {:f => f}
+= render :partial => "form"
