--- a/app/views/admin/sites/_form.html.haml
+++ b/app/views/admin/sites/_form.html.haml
@@ -1,20 +1,30 @@
 - form_for [:admin, @site] do |f|
-  %p
-    = f.label :name
-    = f.text_field :name, :class => 'textbox'
-  %p
-    %label{:for => "site_domain"} Domain match
-    = f.text_field :domain, :class => 'textbox'
-  %p
-    %label{:for => "site_base_domain"} Base domain
-    = f.text_field :base_domain, :class => 'textbox'
-  %p
-    %label{:for => "site_homepage_id"} Homepage ID
-    = f.text_field :homepage_id, :class => 'textbox'
-    - if f.object.new_record?
-      (A new homepage will automatically be created if not specified.)
-  %p.buttons
-    = save_model_button(@site)
-    = save_model_and_continue_editing_button(@site)
-    or 
-    = link_to "Cancel", admin_sites_path
+  = render_region :form_top
+
+  - render_region :form do |form|
+    - form.edit_name do
+      %p
+        = f.label :name
+        = f.text_field :name, :class => 'textbox'
+    - form.edit_match do
+      %p
+        %label{:for => "site_domain"} Domain match
+        = f.text_field :domain, :class => 'textbox'
+    - form.edit_base do
+      %p
+        %label{:for => "site_base_domain"} Base domain
+        = f.text_field :base_domain, :class => 'textbox'
+    - form.edit_homepage do
+      %p
+        %label{:for => "site_homepage_id"} Homepage ID
+        = f.text_field :homepage_id, :class => 'textbox'
+        - if f.object.new_record?
+          (A new homepage will automatically be created if not specified.)
+
+  - render_region :form_bottom do |form_bottom|
+    - form_bottom.edit_buttons do
+      %p.buttons
+        = save_model_button(@site)
+        = save_model_and_continue_editing_button(@site)
+        or 
+        = link_to "Cancel", admin_sites_path
