Only show picker when multiple sites exist

--- a/app/views/admin/pages/_site_subnav.html.haml
+++ b/app/views/admin/pages/_site_subnav.html.haml
@@ -12,7 +12,7 @@
       }.bindAsEventListener(this, site_form));
     });
 
-- if @homepage
+- if @homepage and Site.count > 1
   #actions
     - form_tag '/admin/pages', :id => 'multisite-navigation', :method => :get do
       %ul
