[multi-site] remember last selected site
Steps (assume at least 2 sites present):
1. visit /admin/pages
2. select some other site from the navbar at the left-bottom
3. click some page from the tree
4. click 'Content'-tab at the top-left

Default result:
Step4 and step1 yield the same view.

Adjusted result:
Step4 and *step2* yield the same view (i.e. the tree from the last selected site).

--- a/app/views/admin/pages/_site_subnav.html.haml
+++ b/app/views/admin/pages/_site_subnav.html.haml
@@ -19,5 +19,5 @@
         %li
           %a
             %label{:for => :root} View site: 
-            = select_tag :root, options_from_collection_for_select(Site.all, :homepage_id, :name, params[:root].to_i), :id => 'multisite-select'
+            = select_tag :root, options_from_collection_for_select(Site.all, :homepage_id, :name, @homepage.id), :id => 'multisite-select'
             = submit_tag 'Go', :id => "multisite-submit"
